# castly

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  pipeline.rs  state.rs
src-tauri/src/adb/: client.rs  connection.rs  protocol.rs  server.rs
src-tauri/src/airplay/: fairplay.rs  mdns.rs  mod.rs  receiver.rs  rtsp.rs
src-tauri/src/commands/: control.rs  device.rs  mod.rs  recording.rs  stream.rs
src-tauri/src/discovery/: adb_scanner.rs  airplay_advertiser.rs  mod.rs
src-tauri/src/input/: gesture.rs  keyboard.rs  mapper.rs  mod.rs  touch.rs
src-tauri/src/video/: frame_server.rs  mod.rs  muxer.rs  recorder.rs  screenshot.rs
src/components/layout/: HelpDialog.tsx  Sidebar.tsx  StatusBar.tsx  Titlebar.tsx  Toasts.tsx
src/components/viewport/: ControlBar.tsx  MirrorViewport.tsx  VideoPlayer.tsx
src/lib/: i18n.tsx  mse-player.ts  tauri-commands.ts  types.ts
src/stores/: deviceStore.ts  sessionStore.ts  settingsStore.ts  toastStore.ts
src/styles/: animations.css  globals.css
