[package]
name = "phone-mirror"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP server for video streaming
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Error handling & logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Binary protocols
bytes = "1"
byteorder = "1"

# Streaming
async-stream = "0.3"

# AirPlay
mdns-sd = "0.11"
plist = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
portpicker = "0.1"
rand = "0.9"
base64 = "0.22"
hex = "0.4"
hostname = "0.4"
